:bug: fixed vertical alignment

--- a/assets/css/florian.css
+++ b/assets/css/florian.css
@@ -43,7 +43,7 @@ a {
 .content-row {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center; /* Vertikales Zentrieren */
 }
 
 
